@@ -1,5 +1,7 @@
 cNew entries should be added at the top
 
+2004-07-20 ported toolbar2 to wx
+
 2004-07-20 upgraded to agg21 - JDH
 
 2004-07-20 Added new icons for toolbar2 - JDH
